[gd_scene load_steps=6 format=2]

[ext_resource path="res://assets/CrawlLarge.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://assets/MunroSmall.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://scripts/Title.gd" type="Script" id=3]

[sub_resource type="DynamicFont" id=2]
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=1]
size = 24
font_data = ExtResource( 1 )

[node name="TitleCanvas" type="CanvasLayer"]
script = ExtResource( 3 )

[node name="BackgroundColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0.658824, 0, 1 )

[node name="StartButton" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -46.0
margin_top = 14.0
margin_right = 53.0
margin_bottom = 36.0
custom_fonts/font = SubResource( 2 )
text = "Click to Start"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Header" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -92.0
margin_top = -13.5
margin_right = 92.0
margin_bottom = 13.5
size_flags_horizontal = 0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Dryad's Quest"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="StartButton" to="." method="_on_StartButton_pressed"]
